# qa-analytics-insights

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  AUTHORS.rst  README.rst  basic_functionality_test.py  pyproject.toml  test_fix.py
.github/workflows/: ci.yml
conda-recipe/: meta.yaml
docs/: authors.rst  conf.py  index.rst  requirements.txt
src/qa_analytics_insights/: __init__.py  cli.py  data_classes.py  log.py  parser.py  patch_fetcher.py  result_analyzer.py  result_visualizer.py  xml_filter.py  xml_loader.py  xml_parser.py  xml_processor.py  xml_tag_finder.py
tests/: test_cli.py  test_data_classes.py  test_init.py  test_log.py  test_parser.py  test_patch_fetcher.py  test_result_analyzer.py  test_result_visualizer.py  test_xml_filter.py  test_xml_loader.py  test_xml_parser.py  test_xml_processor.py  test_xml_tag_finder.py
tests/data/: nosetests_one_class.xml  nosetests_test_result.xml  pytest_test_result.xml
